--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.apache.commons:commons-lang3:3.6'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile 'io.rest-assured:rest-assured:3.0.6'
 }
